--- a/css/brands.css
+++ b/css/brands.css
@@ -378,6 +378,16 @@ button:hover,
   filter: brightness(90%);
 }
 
+/* GoFundMe */
+.button.button-gofundme {
+  color: #ffffff;
+  background-color: #02A95C;
+}
+.button.button-gofundme:hover,
+.button.button-gofundme:focus {
+  filter: brightness(90%);
+}
+
 /* Goodreads */
 .button.button-goodreads {
   color: #333333;
@@ -463,6 +473,26 @@ button:hover,
 .button.button-instagram:focus {
   filter: brightness(90%);
 }
+
+/* Kick */
+.button.button-kick {
+  background-color:#000000;
+  color:  #ffffff;
+  border: 1px solid #ffffff;
+}
+.button.button-kick:hover {
+  filter: brightness(90%);
+}
+
+/* Kick Alt */
+.button.button-kick-alt {
+  background-color:#01e701;
+  color:  #000;
+}
+.button.button-kick-alt:hover {
+  filter: brightness(90%);
+}
+
 
 /* Kickstarter */
 .button.button-kickstarter {
@@ -566,6 +596,16 @@ button:hover,
 }
 .button.button-medium:hover,
 .button.button-medium:focus {
+  filter: brightness(90%);
+}
+
+/* NGL */
+.button.button-ngl {
+  color: #ffffff;
+  background-image: linear-gradient(-45deg, #ff8d10, #ec1187);
+}
+.button.button-ngl:hover,
+.button.button-ngl:focus {
   filter: brightness(90%);
 }
 
@@ -808,6 +848,17 @@ button:hover,
   filter: brightness(90%);
 }
 
+/* Threads */
+.button.button-threads {
+  color: #FFFFFF;
+  background-color: #000000;
+  border: 1px solid #FFFFFF;
+}
+.button.button-threads:hover,
+.button.button-threads:focus {
+  filter: brightness(90%);
+}
+
 /* Threema */
 .button.button-threema {
   color: #000000;
@@ -860,7 +911,7 @@ button:hover,
   filter: brightness(90%);
 }
 
-/* Twitter */
+/* Twitter (archiving soon, see 'X') */
 .button.button-twit {
   color: #ffffff;
   background-color: #1da1f2;
@@ -883,7 +934,7 @@ button:hover,
 
 /* Untappd */
 .button.button-untappd {
-  color: #ffffff;
+  color: #000000;
   background-color: #ffc000;
 }
 .button.button-untappd:hover,
@@ -971,6 +1022,17 @@ button:hover,
 }
 .button.button-wordpress:hover,
 .button.button-wordpress:focus {
+  filter: brightness(90%);
+}
+
+/* X */
+.button.button-x {
+  color: #FFFFFF;
+  background-color: #000000;
+  border: 1px solid #FFFFFF;
+}
+.button.button-x:hover,
+.button.button-x:focus {
   filter: brightness(90%);
 }
 
